# ema-h1trend-exchange

./: .env.example  .gitignore  NOTEBOOK_MIGRATION_REPORT.md  README.md  pyproject.toml  requirements.txt  telegram_session.session  telegram_session.session-journal
app/: main.py  ob_main.py
config/: settings.py
core/: constants.py  exceptions.py
exchange/: bybit_client.py  bybit_ws.py  precision.py
execution/: order_manager.py  reconciler.py
logs/: events_ADAUSDT.jsonl  events_AVAXUSDT.jsonl  events_BCHUSDT.jsonl  events_BNBUSDT.jsonl  events_BTCUSDT.jsonl  events_DOGEUSDT.jsonl  events_DOTUSDT.jsonl  events_ETHUSDT.jsonl  events_LTCUSDT.jsonl  events_SHIB1000USDT.jsonl  events_SOLUSDT.jsonl  events_XLMUSDT.jsonl  events_XRPUSDT.jsonl
logs_ob/: events_BTCUSDT.jsonl  events_XAGUSDT.jsonl  events_XAUUSDT.jsonl
market/: data_fetcher.py
models/: order.py
notebooks/: 00_data_fetching_bybit.ipynb  01_closed_trades_charts_bybit.ipynb  02_fee_rate_bybit.ipynb  03_positions_orders_bybit.ipynb  03_strategy03.ipynb  03_strategy03_crypto.ipynb  03_strategy03_crypto_bybit.ipynb  04_signal_audit.ipynb  05_strategy05_commission_tpsl_bybit.ipynb  06_strategy06_fvg_sdfvg_bybit.ipynb  06_support_resistance.ipynb  _all_metrics.ipynb  _all_metrics_crypto.ipynb
notebooks_ob/: 01_data_validation.ipynb  02_displacement_research.ipynb  03_order_block_research.ipynb  04_fvg_validation.ipynb  05_structure_breaks.ipynb  06_liquidity_sweeps.ipynb  07_volume_confirmation.ipynb  08_session_filter.ipynb  09_news_filter.ipynb  10_market_regime.ipynb  11_trade_management.ipynb  (+2 more)
(+42 files in other folders)
